--- a/backend/package.json
+++ b/backend/package.json
@@ -26,9 +26,12 @@
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^10.3.0",
     "@nestjs/typeorm": "^10.0.1",
+    "@types/jsonwebtoken": "^9.0.10",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.2",
     "mysql2": "^3.6.5",
     "reflect-metadata": "^0.1.14",
