feat: add full api backend

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,13 +1,13 @@
-# Database Configuration
-DB_HOST=localhost
-DB_PORT=3306
-DB_USERNAME=root
-DB_PASSWORD=your_password_here
-DB_NAME=user_registration
+# MongoDB connection string
+MONGODB_URI=mongodb://localhost:27017/user-registration
+# Optional database name override (otherwise taken from URI)
+# MONGODB_DB=user-registration
 
-# Application Configuration
-NODE_ENV=development
-PORT=3001
+# Bcrypt salt rounds (integer)
+BCRYPT_SALT_ROUNDS=10
 
-# Security
-JWT_SECRET=your_jwt_secret_here
+# React frontend origin for CORS
+FRONTEND_ORIGIN=http://localhost:5173
+
+# Server port
+PORT=3000
