--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,3 +11,11 @@ FRONTEND_ORIGIN=http://localhost:5173
 
 # Server port
 PORT=3000
+
+# JWT Auth (required for JWT/Refresh flow)
+JWT_ACCESS_SECRET=change-me-access
+JWT_REFRESH_SECRET=change-me-refresh
+# e.g. 15m, 1h
+JWT_ACCESS_TTL=15m
+# e.g. 7d, 30d
+JWT_REFRESH_TTL=7d
